# just_math

./: .gitignore  LICENSE  README.md
libmin/: CMakeLists.txt
libmin/cmake/: DeclareDPIAware.manifest  FindLibmin.cmake  HelpersBootstrap.cmake
libmin/include/: camera3d.h  common_cuda.h  common_defs.h  dataptr.h  datax.h  directory.h  event.h  event_system.h  file_png.h  file_tga.h  geom_helper.h  image.h  image_info.h  imageformat.h  imageformat_bmp.h  imageformat_generic.h  imageformat_jpg.h  imageformat_png.h  imageformat_tga.h  imageformat_tiff.h  main_includes.h  mersenne.h  nv_gui.h  quaternion.h  spline.h  string_helper.h  timex.h  vec.h  widget.h
libmin/mains/: main.h  main_android.cpp  main_console.cpp  main_win.cpp
libmin/src/: camera3d.cpp  common_cuda.cpp  common_defs.cpp  dataptr.cpp  datax.cpp  directory.cpp  event.cpp  event_system.cpp  file_png.cpp  geom_helper.cpp  image.cpp  image_bgr24.cpp  image_bgr8.cpp  image_bw16.cpp  image_bw32.cpp  image_bw8.cpp  image_f8.cpp  image_info.cpp  image_rgb16.cpp  image_rgb24.cpp  image_rgb8.cpp  image_rgba32.cpp  image_rgba32f.cpp  image_rgba8.cpp  imageformat.cpp  imageformat_bmp.cpp  imageformat_generic.cpp  imageformat_jpg.cpp  imageformat_png.cpp  imageformat_tga.cpp  imageformat_tiff.cpp  mersenne.cpp  nv_gui.cpp  quaternion.cpp  spline.cpp  string_helper.cpp  timex.cpp  vec.cpp  widget.cpp
math_3ddda/: CMakeLists.txt  app_3ddda.cpp  main.cpp  main_3ddda.cpp
math_ann/: CMakeLists.txt  app_neural_net.cpp  neural_net.cpp  neural_net.h
math_basis/: CMakeLists.txt  app_basis.cpp  main_basis.cpp
math_belief_prop/: .gitignore  CMakeLists.txt  Makefile  app_belief_prop.cpp  belief_propagation.cpp  belief_propagation.h  belief_propagation_residue.cpp  bp_experiment.cpp  bp_experiment.h  bp_helper.cpp  bp_helper.h  bpr.cpp  build.bat  build.sh  helper.cpp  log.txt  main_belief_prop.cpp  main_belief_propagation.cpp  main_belief_propagation.h  pd_getopt.h  tests_belief_propagation.cpp  tiny_obj_loader.h
math_belief_prop/assets/: amarelo_tiled.json  loops3d_rule.csv  loops_name.csv  loops_rule.csv  loops_tileset.json  oloz_tilefilter.txt  pm_tiled.json  pm_tilefilter.txt  pm_tilename.csv  rail_name.csv  rail_rule.csv  rail_tunnels_name.csv  rail_tunnels_rule.csv  rail_unweighted_rule.csv  rail_unweighted_tileset.json  rail_weighted_name.csv  rail_weighted_tileset.json  rg_name.csv  rgb_name.csv  rgb_rule.csv  road2d_objloc.csv  road2d_tilename.csv  road2d_tilerule.csv  smb_tilefilter.txt  smb_tilename_weighted.csv  stair_name.csv
math_belief_prop/aux/: README.md  generate-example-tile-collections  img2tile
math_belief_prop/aux/example_tile_collection/: amarelo_tiled.json  blowhard_tiled.json  smb_tilename.csv
math_belief_prop/doc/: Belief-Propagation-Notes.md  Breakout-Model-Synthesis.md  Developer-Notes.md  FileFormats.md  Help-Constraint-DSL.md  Help_Docs.txt  Notes.md  Quick-Start.md  TODO.md
math_belief_prop/examples/: example0_name.csv  example0_rule.csv  example_run.sh  example_run_debug.sh  example_run_stair.sh  example_run_stair_debug.sh  img2tile  map2tile.py  notes  oskar_tile.json  pm2_name.csv  pm2_rule.csv  pm2_simple.json  pm_bn.csv  pm_br.csv  pm_tb.json  pm_tiled.json  pm_tilename.csv  pm_tilerule.csv  rg.js  rg_rule.csv  rgb.js  rgb_constraint.csv  rgb_n.js  rgb_name.csv  rgb_rule.csv  single2d.js  single2d_constraint.csv  single2d_name.csv  single2d_rule.csv  single_2d.js
math_belief_prop/experiments/: bp-oskar12
math_belief_prop/experiments/bp/: bp-r-oskar12  bp-r-oskar8  wfc-oskar
math_belief_prop/experiments/muforest/: muforest-radius  muforest_n128_2d_r.gp  tilename_mu_forest.csv  tilerule_mu_forest.csv
math_belief_prop/experiments/oloz/: oloz-radius  (+2 more)
math_belief_prop/helper/: a.out  parse_rule.cpp
math_belief_prop/test/: bp_test16_output.txt  run_tests.sh  stair_rule.csv  test1.py  test12.py  test13.py  test17  test18  test19  test2.py  test4.py  test5.py
math_belief_prop/tilegen/: BREAKOUT-OSKAR-PATH  BREAKOUT-Z  MMS-STAIR  MMS-Z  README.md  img2tile  oloz.filter  oskar_pipe  resolve2heat  run-bpc-breakout-example-amarelo  run-bpc-breakout-example-muforest  run-bpc-breakout-example-pm  run-bpc-breakout-stair  run-bpc-example  run-bpc-wfc-block-example  run-bpc-wfc-block-example-pm  run-bpc-wfc-block-example-stair  run-bpc-wfc-example-muforest  stair
math_bilinear_patch/: CMakeLists.txt  app_bilinear_patch.cpp
math_cells/: CMakeLists.txt  app_cells.cpp
math_constraint_collapse/: CMakeLists.txt  app_constraint_collapse.cpp  build.bat  build.sh  constraint_collapse.cpp  constraint_collapse.h  run.bat
math_constraint_collapse/assets/: rg_constraint.csv  rg_rule.csv  rgb_constraint.csv  rgb_name.csv
math_constraint_collapse/doc/: Belief-Propagation-Notes.md
math_deform/: CMakeLists.txt  app_deform.cpp  main_deform.cpp
math_displace_mesh/: CMakeLists.txt  app_displace_mesh.cpp  mesh.cpp  mesh.h  mesh_info.h
math_displace_sphere/: CMakeLists.txt  app_displace_sphere.cpp
math_dmap/: CMakeLists.txt  app_dmap.cpp  mesh.cpp  mesh.h  mesh_info.h
math_flightsim/: CMakeLists.txt  app_flightsim.cpp
math_flock/: CMakeLists.txt  app_flock.cpp
math_gcoder/: CMakeLists.txt  app_gcoder.cpp  build.sh  gcoder.cpp  gcoder.h  main_gcoder.cpp  main_gcoder.h  pd_getopt.h
math_invk/: CMakeLists.txt  app_invk.cpp  joints.cpp  joints.h  main_invk.cpp
math_obj_materials/: CMakeLists.txt  app_obj_materials.cpp  mesh.cpp
math_obj_materials/assets/: rail_materials.mtl
math_phong_surfaces/: CMakeLists.txt  app_phong_surfaces.cpp
math_quat_squad/: CMakeLists.txt  app_quat_squad.cpp
math_quat_trajectory/: CMakeLists.txt  app_quat_trajectory.cpp  main_quat_trajectory.cpp
math_raycast/: CMakeLists.txt  app_raycast.cpp  main_raycast.cpp
math_tilegen/: CMakeLists.txt  app_tilegen.cpp  mesh.h
math_tilegen/assets/: rail_materials.mtl
math_voxelizer/: CMakeLists.txt  app_voxelizer.cpp  main_voxelizer.cpp
math_wangtiles/: CMakeLists.txt  app_wangtiles.cpp  wang_tiles.cpp  wang_tiles.h
math_wangtiles3d/: CMakeLists.txt  app_wangtiles3d.cpp  wang_tiles.cpp  wang_tiles.h
(+50 files in other folders)
